objects/gvp__Product_Review__c.object
<CustomObject>
    <description>[Unsupported] A review or rating of a product by a journalist or competition.</description>
    <fields>
        <fullName>gvp__Account__c</fullName>
        <label>Source (Account)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Media</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Reviews</relationshipLabel>
        <relationshipName>Product_Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>gvp__Item__c</fullName>
        <label>Item</label>
        <referenceTo>gvp__Item__c</referenceTo>
        <relationshipLabel>Product Reviews</relationshipLabel>
        <relationshipName>Product_Reviews</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>gvp__Journalist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Journalist</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Product Reviews</relationshipLabel>
        <relationshipName>Product_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Name_of_Review__c</fullName>
        <label>Name of Review</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>gvp__Summary__c</fullName>
        <label>Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Product Review</label>
    <listViews>
        <fullName>gvp__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>REV-{000000000}</displayFormat>
        <label>Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>